--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.spongepowered.plugin' version '0.8.1'
+    id 'org.spongepowered.plugin' version '0.9.0'
     id 'idea'
     id 'eclipse'
     id 'java'
@@ -11,6 +11,13 @@ description = 'Plugin for restoring contents of a container after the specified 
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0'
+}
+
+jar {
+    if(System.getenv("JENKINS_HOME")) {
+        version = version + "_" + System.getenv("BUILD_NUMBER")
+        println("File name =>" + baseName)
+    }
 }
 
 tasks.create("publishBuildOnDiscord") {
