--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'idea'
     id 'eclipse'
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 group = 'io.github.aquerr.chestrefill'
@@ -10,7 +11,7 @@ version = '1.12.2-1.6.0'
 description = 'Plugin for restoring contents of a container after the specified time.'
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:7.2.0'
+    shadow 'org.spongepowered:spongeapi:7.2.0'
 }
 
 jar {
@@ -18,6 +19,10 @@ jar {
         version = version + "_" + System.getenv("BUILD_NUMBER")
         println("File name =>" + baseName)
     }
+}
+
+shadowJar {
+    classifier = null
 }
 
 tasks.create("publishBuildOnDiscord") {
