Fix jenkinsdiscordbot path

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ tasks.create("publishBuildOnDiscord") {
             }
 
             exec {
-                commandLine("java", "-jar", "..\\jenkinsdiscordbot-1.0.jar", "ChestRefill", jarFiles[0], lastCommitDescription)
+                commandLine("java", "-jar", ".." + File.separator + "jenkinsdiscordbot-1.0.jar", "ChestRefill", jarFiles[0], lastCommitDescription)
             }
         }
     }
