Loot table support

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,7 @@ org.gradle.jvmargs=-Xmx4G
 chestrefill.id=chestrefill
 chestrefill.name=Chest Refill
 chestrefill.version=2.0.0
+
+minecraft.version=1.16.5
+forge.version=1.16.5-36.2.39
 sponge-api.version=8.1.0
