Check new version against Ore API v2. Update version to 2.0.1.

--- a/src/main/resources/assets/chestrefill/config.conf
+++ b/src/main/resources/assets/chestrefill/config.conf
@@ -1,2 +1,6 @@
 # Defines what language will be used for plugin messages. Default: en_US
 language-tag=en_US
+
+# By default, Chest Refill checks for new available version online and informs about it in the server console at startup.
+# Also, it informs players with "chestrefill.version.notify" permission about new version available when they join the game.
+version-check=true
